fix testimonial on mobile devices

--- a/style/style.css
+++ b/style/style.css
@@ -756,7 +756,7 @@ footer .copyright {
     display: none;
   }
   .swiper {
-    height: 100%;
+    height: 107%;
     width: var(--width);
   }
   .swiper-slide {
